# aviva-pricing-copilot

./: .env.example  EVAL_RESULTS.md  README.md  api.py  app.py  data_generator.py  evaluate.py  golden_set.json  graph.py  guardrails.py  llm.py  pyproject.toml  requirements.txt  retriever.py  schemas.py
agents/: __init__.py  claims_agent.py  conversion_agent.py  market_agent.py  recommendation_agent.py
data/: claims_performance.csv  competitor_pricing.csv  conversion_performance.csv  customer_feedback.csv  previous_pricing_actions.csv
data/market_intel/: competitor_motor_young_driver.md  home_market_stable.md  regulatory_consumer_duty.md  reinsurance_motor.md
