[project]
name = "aviva-pricing-copilot"
version = "0.1.0"
description = "Multi-agent Pricing Analyst Copilot — Aviva case study (Challenge B)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.2.6",
    "langchain>=1.3.10",
    "langchain-ollama>=0.3.0",
    "pandas>=2.2.0",
    "pydantic>=2.9.0",
    "streamlit>=1.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.2.2",
]
